fix map z-index?

--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@ a {
 main {
   display: flex;
   flex-direction: column;
+  z-index: 0;
 }
 
 /* map styles */
@@ -123,6 +124,7 @@ main {
   padding: 1rem;
   padding-top: calc(112px + 1rem);
   height: 100vh;
+  position: relative;
 }
 
 #map-target {
@@ -168,7 +170,7 @@ main {
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.8);
   display: none;
-  z-index: 1;
+  z-index: 10;
   height: 100vh;
   width: 100vw;
 }
